--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                    
+                                                        
+    
     
     
     
@@ -12,7 +13,8 @@
     
     
     <wb-module deploy-name="ecommerce">
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -25,7 +27,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -38,7 +41,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -51,7 +55,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                        
+                                                                                                                
+        
         
         
         
@@ -64,7 +69,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                                        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
+                                                                                                                
+        
         
         
         
@@ -77,7 +84,8 @@
         
         
         <property name="java-output-path" value="/ecommerce/target/classes"/>
-                                                                                                
+                                                                                                        
+        
         
         
         
@@ -89,7 +97,8 @@
         
         
         <property name="context-root" value="ecommerce"/>
-                                                                                                    
+                                                                                                            
+    
     
     
     
@@ -102,7 +111,8 @@
     
     
     </wb-module>
-                                                
+                                                    
+
 
 
 
